--- a/src/Styles/ToggleButton.css
+++ b/src/Styles/ToggleButton.css
@@ -1,12 +1,11 @@
 .ToggleButton {
     position: fixed;
-    top: 5px;
-    left: 5px;
+    top: 15px;
+    left: 15px;
     z-index: 1;
 }
 
 .ToggleButton button {
-    padding: 5px;
     font-size: 1.2em;
     width: 40px;
     height: 40px;
